--- a/index.html
+++ b/index.html
@@ -16,50 +16,55 @@
 <body>
 <div class="container my-5">
     <div class="card bg-light">
-    <form class="card-body" id="obsForm">
-        <!-- comment -->
-        <div class="form-group">
-            <label for="cssFormControlTextarea">Comment CSS</label>
-            <textarea class="form-control" id="cssFormControlTextarea" rows="10"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="commentURLInput">Comment URL</label>
-            <input class="form-control" type="text" id="commentURLInput" placeholder="" value="http://z.fjucpc.tk:8080/messages">
-        </div>
-        <div class="form-inline">
-            <div class="form-group">
-                <label class="my-1 mr-2" for="SlidoInput">Slido</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="SlidoInput" placeholder="" value="">
-            </div>
-            <div class="form-group">
-                <label class="my-1 mr-2" for="YoutubeInput">Youtube</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="YoutubeInput" placeholder="" value="">
-            </div>
+        <div class="card-body">
+        <h5 class="card-title">OBS 場景設定檔產生</h5>
+        <p class="card-text">參考<a href="https://hackmd.io/@nisra/HyuCV5DmI/https%3A%2F%2Fhackmd.io%2FBN5NWvpQSIuH-vvJJcyHDg%3Fview">實況架設</a>架設聊天室後端<br>注：Youtube 通常沒在用</p>
         </div>
         <hr>
-        <!-- main bg -->
-        <div class="form-inline">
+        <form class="card-body" id="obsForm">
+            <!-- comment -->
             <div class="form-group">
-                <label class="my-1 mr-2" for="titleInput">Title</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="titleInput" placeholder="" value="">
+                <label for="cssFormControlTextarea">Comment CSS</label>
+                <textarea class="form-control" id="cssFormControlTextarea" rows="10"></textarea>
             </div>
             <div class="form-group">
-                <label class="my-1 mr-2" for="speakerInput">Speaker</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="speakerInput" placeholder="" value="">
+                <label for="commentURLInput">Comment URL</label>
+                <input class="form-control" type="text" id="commentURLInput" placeholder="" value="http://z.fjucpc.tk:8080/messages">
             </div>
-        </div>
-        <div class="form-inline">
-            <div class="form-group">
-                <label class="my-1 mr-2" for="OffInput">Off text</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="OffInput" placeholder="" value="">
+            <div class="form-inline">
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="SlidoInput">Slido hash</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="SlidoInput" placeholder="" value="">
+                </div>
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="YoutubeInput">Youtube stream id</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="YoutubeInput" placeholder="" value="">
+                </div>
             </div>
-            <div class="form-group">
-                <label class="my-1 mr-2" for="ByeInput">Bye text</label>
-                <input class="form-control mb-2 mr-sm-2" type="text" id="ByeInput" placeholder="" value="">
+            <hr>
+            <!-- main bg -->
+            <div class="form-inline">
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="titleInput">標題</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="titleInput" placeholder="" value="">
+                </div>
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="speakerInput">講者</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="speakerInput" placeholder="" value="">
+                </div>
             </div>
-        </div>
-        <button type="submit" id="formSubmitBtn1" class="btn btn-primary">Submit</button>
-    </form>
+            <div class="form-inline">
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="OffInput">Off text</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="OffInput" placeholder="" value="">
+                </div>
+                <div class="form-group">
+                    <label class="my-1 mr-2" for="ByeInput">Bye text</label>
+                    <input class="form-control mb-2 mr-sm-2" type="text" id="ByeInput" placeholder="" value="">
+                </div>
+            </div>
+            <button type="submit" id="formSubmitBtn1" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 </div>
 </body>
