fix bad url and add bg color radio btn

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
                     <input class="form-control mb-2 mr-sm-2" type="text" id="ByeInput" placeholder="" value="">
                 </div>
             </div>
+            <div class="form-inline">
+                <label class="my-1 mr-2">BG color: </label>
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-dark">
+                        <input type="radio" name="bg" id="bgToggleBlack" value="black" autocomplete="off" checked> Black
+                    </label>
+                    <label class="btn btn-light">
+                        <input type="radio" name="bg" id="bgToggleWhite" value="white" autocomplete="off"> White
+                    </label>
+                </div>
+            </div>
             <button type="submit" id="formSubmitBtn1" class="btn btn-primary">Submit</button>
         </form>
     </div>
