--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="card bg-light">
         <div class="card-body">
         <h5 class="card-title">OBS 場景設定檔產生</h5>
-        <p class="card-text">參考<a href="https://hackmd.io/@nisra/HyuCV5DmI/https%3A%2F%2Fhackmd.io%2FBN5NWvpQSIuH-vvJJcyHDg%3Fview">實況架設</a>架設聊天室後端<br>注：Youtube 通常沒在用</p>
+        <p class="card-text">參考<a href="https://hackmd.io/BN5NWvpQSIuH-vvJJcyHDg?view">實況架設</a>架設聊天室後端<br>注：Youtube 通常沒在用</p>
         </div>
         <hr>
         <form class="card-body" id="obsForm">
