--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
             <div class="form-group">
                 <label for="commentURLInput">Comment URL</label>
-                <input class="form-control" type="text" id="commentURLInput" placeholder="" value="http://140.136.151.11:8080/messages">
+                <input class="form-control" type="text" id="commentURLInput" placeholder="" value="https://c.nisra.net/messages">
             </div>
 
-            <a href="http://140.136.151.11:8080/admin" target="_blank" rel="noopener noreferrer" class="btn btn-primary mb-3">Admin Page</a>
+            <a href="https://c.nisra.net/admin" target="_blank" rel="noopener noreferrer" class="btn btn-primary mb-3">Admin Page</a>
 
             <div class="form-inline">
                 <div class="form-group">
